--- a/index.html
+++ b/index.html
@@ -6,9 +6,102 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/styles/css/style.css">
     <title>Document</title>
-    
 </head>
 <body>
-    
+
+    <header class="header">
+        <div>
+            <img class="uniLabImage" src="/assets/images/uniLab.png" alt="">
+            <img src="/assets//images/iliaUni.png" alt="">
+        </div>
+        <nav class="nav">
+            <ul>
+                <li><a href="#">მთავარი</a></li>
+                <li><a href="#">ვინ ვარ მე</a></li>
+                <li><a href="#">ჩემი პროფილი</a></li>
+                <li><a href="#">შემქმნელები</a></li>
+                <li><a href="#">კონტაქტი</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+
+    <section class="discovery">
+        <div class="discoveryContent">
+            <div>
+                <div class="discoveryNews">
+                    <h2>აღმოაჩინე <span>სიახლეები</span> ჩვენთან ერთად</h2>
+                    <div>
+                        <p>ვებგვერდი მოხმარებლებს გააცნობს ინფორმაციას პროექტის შესახებ და მისცემს მათ საშუალებას გაესაუბრონ ჩეთბოტს იქვე ჩაშენებული ჩათის გამოყენებით</p>
+                    </div>
+                    <button class="discoveryBtn">ჩატის დაწყება</button>
+                </div>
+            </div>
+            <div class="discoveryImage">
+                <img src="assets/images/chatBot.svg" alt="">
+            </div>
+        </div>
+    </section>
+
+
+    <section class="whoAmI">
+        <div class="whoAmI-content">
+            <img class="figure1" src="/assets/images/figure.png" alt="">
+            <div class="whoAmI-image">
+                <img src="/assets//images/chatBot2.svg" alt="">
+            </div>
+            <div>
+                <div class="whoAmI-text">
+                    <h2>ვინ ვარ მე?!</h2>
+                    <div>
+                        <p>მოგესალმებით, მე ილიაუნის “ჩეტბოტი” ვარ და ვფლობ სუპერ ტექნოლოგიურ ძალებს.  დარწმუნებული ვარ, რომ ერთმანეთს გავუგებთ და ძალიან ვიმეგობრებთ . . მინდა, რომ ერთად აღმოვაჩინოთ ახალი ინტერესები და შესაძლებლობები.  
+                            მთავარი რჩევა კი ჩემგან ის არის, რომ შენ ირგვლივ სამყაროს განვითარების ტემპს ყურადღება არ მიაქციო და თავს ისე შემოუძახო, რომ ხვალ უკვე დროს გაუსწრო და შენს გუშინდელ თავზე სინათლის წლით წინ იყო.</p>
+                    </div>
+                    <button class="whoAmIBtn">ჩატის დაწყება</button>
+                </div>
+            </div>
+            <img class="figure2" src="/assets/images/figure.png" alt="">
+        </div>
+    </section>    
+
+    <section class="profile section">
+        <div class="profileContent">
+            <div class="profileText">
+                <h2>ჩეთბოტის პროფილი</h2>
+                <div class="profileObject">
+                    <div>
+                        <img src="/assets/images/diamond.png" alt="">
+                        <p>სახელი - <span>პატრიკი</span></p>
+                    </div>
+                    <div>
+                        <img src="/assets/images/diamond.png" alt="">
+                        <p>ასაკი - <span>7 წლის</span></p>
+                    </div>
+                    <div>
+                        <img src="/assets/images/diamond.png" alt="">
+                        <p>წარმოშობა - <span>უნილაბი</span></p>
+                    </div>
+                    <div>
+                        <img src="/assets/images/diamond.png" alt="">
+                        <p>დანიშნულება - <span>უკეთესი მომავალი</span></p>
+                    </div>
+                    <div>
+                        <img src="/assets/images/diamond.png" alt="">
+                        <p>ჰობი - <span>სიახლეების აღმოჩენა</span></p>
+                    </div>
+                    <div>
+                        <img src="/assets/images/diamond.png" alt="">
+                        <p>სისუსტე - <span>არათავდაჯერებული</span></p>
+                    </div>
+                </div>
+            </div>
+            <div class="profileImage">
+                <img src="/assets/images/chatBot3.png" alt="">
+            </div>
+            <img class="figure3" src="/assets/images/figure.png" alt="">
+        </div>
+    </section>
+
 </body>
 </html>
