--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- header -->
     <header class="header">
         <div>
-            <img class="uniLabImage" src="/assets/images/uniLab.png" alt="">
+            <img class="uniLabImage" src="assets/images/uniLab.png" alt="">
             <img src="assets//images/iliaUni.png" alt="">
         </div>
         <nav class="nav">
