--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/styles/css/style.css">
+    <link rel="stylesheet" href="assets/styles/css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,8 +12,8 @@
     <!-- header -->
     <header class="header">
         <div>
-            <img class="uniLabImage" src="/assets/images/uniLab.png" alt="">
-            <img src="/assets//images/iliaUni.png" alt="">
+            <img class="uniLabImage" src="assets/images/uniLab.png" alt="">
+            <img src="assets/images/iliaUni.png" alt="">
         </div>
         <nav class="nav">
             <ul>
@@ -26,6 +26,9 @@
         </nav>
     </header>
 
+    <div>
+        <div class="reactangle"></div>
+    </div>
 
     <!-- discovery -->
     <section class="discovery" id="home">
@@ -48,9 +51,9 @@
     <!-- whoAmI -->
     <section class="whoAmI" id="whoAmI">
         <div class="whoAmI-content">
-            <img class="figure1" src="/assets/images/figure.png" alt="">
+            <img class="figure1" src="assets/images/figure.png" alt="">
             <div class="whoAmI-image">
-                <img src="/assets//images/chatbot/chatBot2.svg" alt="">
+                <img src="assets//images/chatbot/chatBot2.svg" alt="">
             </div>
             <div>
                 <div class="whoAmI-text">
@@ -62,7 +65,7 @@
                     <button class="whoAmIBtn">ჩატის დაწყება</button>
                 </div>
             </div>
-            <img class="figure2" src="/assets/images/figure.png" alt="">
+            <img class="figure2" src="assets/images/figure.png" alt="">
         </div>
     </section>    
 
@@ -73,35 +76,35 @@
                 <h2>ჩეთბოტის პროფილი</h2>
                 <div class="profileObject">
                     <div>
-                        <img src="/assets/images/diamond.png" alt="">
+                        <img src="assets/images/diamond.png" alt="">
                         <p>სახელი - <span>პატრიკი</span></p>
                     </div>
                     <div>
-                        <img src="/assets/images/diamond.png" alt="">
+                        <img src="assets/images/diamond.png" alt="">
                         <p>ასაკი - <span>7 წლის</span></p>
                     </div>
                     <div>
-                        <img src="/assets/images/diamond.png" alt="">
+                        <img src="assets/images/diamond.png" alt="">
                         <p>წარმოშობა - <span>უნილაბი</span></p>
                     </div>
                     <div>
-                        <img src="/assets/images/diamond.png" alt="">
+                        <img src="assets/images/diamond.png" alt="">
                         <p>დანიშნულება - <span>უკეთესი მომავალი</span></p>
                     </div>
                     <div>
-                        <img src="/assets/images/diamond.png" alt="">
+                        <img src="assets/images/diamond.png" alt="">
                         <p>ჰობი - <span>სიახლეების აღმოჩენა</span></p>
                     </div>
                     <div>
-                        <img src="/assets/images/diamond.png" alt="">
+                        <img src="assets/images/diamond.png" alt="">
                         <p>სისუსტე - <span>არათავდაჯერებული</span></p>
                     </div>
                 </div>
             </div>
             <div class="profileImage">
-                <img src="/assets/images/chatbot/chatBot3.png" alt="">
+                <img src="assets/images/chatbot/chatBot3.png" alt="">
             </div>
-            <img class="figure3" src="/assets/images/figure.png" alt="">
+            <img class="figure3" src="assets/images/figure.png" alt="">
         </div>
     </section>
 
@@ -118,12 +121,12 @@
     <!-- narrative -->
     <section class="narrative">
         <div class="narrative-image">
-            <img src="/assets/images/chatbot/chatbot4.png" alt="">
+            <img src="assets/images/chatbot/chatbot4.png" alt="">
         </div>
         <div class="narattive-container">
             <div class="narrative-item">
                 <div class="narrative-icon">
-                    <img src="/assets/images/narrative/narattive1.png" alt="">
+                    <img src="assets/images/narrative/narattive1.png" alt="">
                 </div>
                 <div>
                     <h4>ნარატივ დიზაინერი</h4>
@@ -134,7 +137,7 @@
             </div>
             <div class="narrative-item">
                 <div class="narrative-icon">
-                    <img src="/assets/images/narrative/narattive2.png" alt="">
+                    <img src="assets/images/narrative/narattive2.png" alt="">
                 </div>
                 <div>
                     <h4>ანიმა ჩეთბოტიქსი</h4>
@@ -145,7 +148,7 @@
             </div>
             <div class="narrative-item">
                 <div class="narrative-icon">
-                    <img src="/assets/images/narrative/narattive3.png" alt="">
+                    <img src="assets/images/narrative/narattive3.png" alt="">
                 </div>
                 <div>
                     <h4>უნილაბი</h4>
@@ -159,21 +162,21 @@
 
     <!-- footer -->
     <footer class="footer" id="contact">
-        <img class="figure5" src="/assets/images/figure.png" alt="">
+        <img class="figure5" src="assets/images/figure.png" alt="">
         <div>
             <div class="chatbot">
                 <h4>ანიმა ჩეთბოტიქსი</h4>
                 <div class="contact">
                     <div>
-                        <img src="/assets/images/contact/contact-phone.png" alt="">
+                        <img src="assets/images/contact/contact-phone.png" alt="">
                         <p>+995 591 69 04 06</p>
                     </div>
                     <div>
-                        <img src="/assets/images/contact/contact-gmail.png" alt="">
+                        <img src="assets/images/contact/contact-gmail.png" alt="">
                         <p>contact@animachatbotics.com</p>
                     </div>
                     <div>
-                        <img src="/assets/images/contact/contact-map.png" alt="">
+                        <img src="assets/images/contact/contact-map.png" alt="">
                         <p>თბილისი კოსტავას N:14</p>
                     </div>
                 </div>
@@ -183,11 +186,11 @@
                 <h4>უნილაბი</h4>
                 <div class="contact">
                     <div>
-                        <img src="/assets/images/contact/contact-gmail.png" alt="">
+                        <img src="assets/images/contact/contact-gmail.png" alt="">
                         <p>infounilab@iliauni.edu.ge</p>
                     </div>
                     <div>
-                        <img src="/assets/images/contact/contact-map.png" alt="">
+                        <img src="assets/images/contact/contact-map.png" alt="">
                         <p>3/5 ქაქუცა ჩოლოყაშვილის ქუჩა თბილისი</p>
                     </div>
                 </div>
@@ -196,6 +199,7 @@
     </footer>
 
 
-    <script src="/assets/js/main.js"></script>
+
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
