--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 <body>
 
+    <div class="background-image"></div>
+
+    <div class="message-square"></div>
     <!-- header -->
     <header class="header">
         <div>
-            <img class="uniLabImage" src="assets/images/uniLab.png" alt="">
+            <img class="uniLabImage" src="assets/images/uniLab.svg" alt="">
+            <img class="uniLabImage" src="assets/images/iliaUni.svg" alt="">
         </div>
         <nav class="nav">
             <ul>
@@ -28,7 +32,7 @@
     <div>
         <div class="reactangle"></div>
     </div>
-
+    
     <!-- discovery -->
     <section class="discovery" id="home">
         <div class="discoveryContent">
@@ -42,7 +46,7 @@
                 </div>
             </div>
             <div class="discoveryImage">
-                <img src="assets/images/chatbot/chatBot.svg" alt="">
+                <img src="assets/images/chatbot/chatBot.png" alt="">
             </div>
         </div>
     </section>
@@ -103,53 +107,29 @@
             <div class="profileImage">
                 <img src="assets/images/chatbot/chatBot3.png" alt="">
             </div>
-            <img class="figure2" src="assets/images/figure.png" alt="">
-        </div>
-    </section>
-
-    <section>
-        <div>
-            <h2>ვსაუბრობ შენთვის მორგებულ და მარტივ ენაზე</h2>
-        </div>
-        <div>
-            <div>
-                <img src="" alt="">
-                <h3>ვებ პროგრამირება</h3>
-                <p>მე შემიძლია შენთან ერთად აღმოვაჩნო სიახლეები და მოგაწოდო ბევრი ახალი ინფორმაცია</p>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h3>ციფრული კომუნიკაციები</h3>
-                <p>მე შემიძლია შენთან ერთად აღმოვაჩნო სიახლეები და მოგაწოდო ბევრი ახალი ინფორმაცია</p>
-            </div>
-            <div>
-                <img src="" alt="">
-                <h3>გრაფიკული დიზაინი</h3>
-                <p>მე შემიძლია შენთან ერთად აღმოვაჩნო სიახლეები და მოგაწოდო ბევრი ახალი ინფორმაცია</p>
-            </div>
             <img class="figure3" src="assets/images/figure.png" alt="">
         </div>
     </section>
 
-    <!-- creators -->
-    <section class="creators" id="creators">
-        <div class="creators_title">
+    <!-- communication -->
+    <section class="communication">
+        <div class="communication_title">
             <h2>ვსაუბრობ შენთვის მორგებულ და მარტივ ენაზე</h2>
         </div>
-        <div class="creators_container">
+        <div class="communication_container">
             <!-- js -->
         </div>
     </section>
 
-    <!-- narrative -->
-    <section class="narrative">
-        <div class="narrative-image">
+    <!-- creators -->
+    <section class="creators"  id="creators">
+        <div class="creators-image">
             <img src="assets/images/chatbot/chatbot4.png" alt="">
         </div>
-        <div class="narattive-container">
-            <div class="narrative-item">
-                <div class="narrative-icon">
-                    <img src="assets/images/narrative/narattive1.png" alt="">
+        <div class="creators-container">
+            <div class="creators-item">
+                <div class="creators-icon">
+                    <img src="assets/images/creators/creators1.png" alt="">
                 </div>
                 <div>
                     <h4>ნარატივ დიზაინერი</h4>
@@ -158,9 +138,9 @@
                     </p>
                 </div>
             </div>
-            <div class="narrative-item">
-                <div class="narrative-icon">
-                    <img src="assets/images/narrative/narattive2.png" alt="">
+            <div class="creators-item">
+                <div class="creators-icon">
+                    <img src="assets/images/creators/creators2.png" alt="">
                 </div>
                 <div>
                     <h4>ანიმა ჩეთბოტიქსი</h4>
@@ -169,9 +149,9 @@
                     </p>
                 </div>
             </div>
-            <div class="narrative-item">
-                <div class="narrative-icon">
-                    <img src="assets/images/narrative/narattive3.png" alt="">
+            <div class="creators-item">
+                <div class="creators-icon">
+                    <img src="assets/images/creators/creators3.png" alt="">
                 </div>
                 <div>
                     <h4>უნილაბი</h4>
@@ -186,35 +166,43 @@
     <!-- footer -->
     <footer class="footer" id="contact">
         <img class="figure5" src="assets/images/figure.png" alt="">
-        <div>
             <div class="chatbot">
                 <h4>ანიმა ჩეთბოტიქსი</h4>
                 <div class="contact">
-                    <div>
-                        <img src="assets/images/contact/contact-phone.png" alt="">
-                        <p>+995 591 69 04 06</p>
+                    <div class="contact-flex">
+                        <div>
+                            <img src="assets/images/contact/contact-phone.png" alt="">
+                            <p>+995 591 69 04 06</p>
+                        </div>
                     </div>
-                    <div>
-                        <img src="assets/images/contact/contact-gmail.png" alt="">
-                        <p>contact@animachatbotics.com</p>
+                    <div class="contact-flex">
+                        <div>
+                            <img src="assets/images/contact/contact-gmail.png" alt="">
+                            <p>contact@animachatbotics.com</p>
+                        </div>
                     </div>
-                    <div>
-                        <img src="assets/images/contact/contact-map.png" alt="">
-                        <p>თბილისი კოსტავას N:14</p>
+                    <div class="contact-flex">
+                        <div>
+                            <img src="assets/images/contact/contact-map.png" alt="">
+                            <p>თბილისი კოსტავას N:14</p>
+                        </div>
                     </div>
-                </div>
                 </div>
             </div>
             <div class="unilab">
                 <h4>უნილაბი</h4>
                 <div class="contact">
-                    <div>
-                        <img src="assets/images/contact/contact-gmail.png" alt="">
-                        <p>infounilab@iliauni.edu.ge</p>
+                    <div class="contact-flex">
+                        <div>
+                            <img src="assets/images/contact/contact-gmail.png" alt="">
+                            <p>infounilab@iliauni.edu.ge</p>
+                        </div>
                     </div>
-                    <div>
-                        <img src="assets/images/contact/contact-map.png" alt="">
-                        <p>3/5 ქაქუცა ჩოლოყაშვილის ქუჩა თბილისი</p>
+                    <div class="contact-flex">
+                        <div>
+                            <img src="assets/images/contact/contact-map.png" alt="">
+                            <p>3/5 ქაქუცა ჩოლოყაშვილის ქუჩა თბილისი</p>
+                        </div>
                     </div>
                 </div>
             </div>
