--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
     </section>
 
-    <!-- creators -->
+    <!-- communication -->
     <section class="communication">
         <div class="communication_title">
             <h2>ვსაუბრობ შენთვის მორგებულ და მარტივ ენაზე</h2>
@@ -121,7 +121,7 @@
         </div>
     </section>
 
-    <!-- narrative -->
+    <!-- creators -->
     <section class="creators"  id="creators">
         <div class="creators-image">
             <img src="assets/images/chatbot/chatbot4.png" alt="">
