--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <body>
 
     <div class="background-image"></div>
-
-    <div class="message-square"></div>
+    <div class="message-square">
+        <img src="assets/images/message-square.svg" alt="">
+    </div>
     <!-- header -->
     <header class="header">
-        <div>
+        <div class="images">
             <img class="uniLabImage" src="assets/images/uniLab.svg" alt="">
             <img class="uniLabImage" src="assets/images/iliaUni.svg" alt="">
         </div>
@@ -28,10 +29,6 @@
             </ul>
         </nav>
     </header>
-
-    <div>
-        <div class="reactangle"></div>
-    </div>
     
     <!-- discovery -->
     <section class="discovery" id="home">
@@ -62,7 +59,7 @@
                 <div class="whoAmI-text">
                     <h2>ვინ ვარ მე?!</h2>
                     <div>
-                        <p>მოგესალმებით, მე ილიაუნის “ჩეტბოტი” ვარ და ვფლობ სუპერ ტექნოლოგიურ ძალებს.  დარწმუნებული ვარ, რომ ერთმანეთს გავუგებთ და ძალიან ვიმეგობრებთ . . მინდა, რომ ერთად აღმოვაჩინოთ ახალი ინტერესები და შესაძლებლობები.  
+                        <p>მოგესალმებით, მე ილიაუნის “ჩეტბოტი” ვარ და ვფლობ სუპერ ტექნოლოგიურ ძალებს.  დარწმუნებული ვარ, რომ ერთმანეთს გავუგებთ და ძალიან ვიმეგობრებთ. . მინდა, რომ ერთად აღმოვაჩინოთ ახალი ინტერესები და შესაძლებლობები.  
                             მთავარი რჩევა კი ჩემგან ის არის, რომ შენ ირგვლივ სამყაროს განვითარების ტემპს ყურადღება არ მიაქციო და თავს ისე შემოუძახო, რომ ხვალ უკვე დროს გაუსწრო და შენს გუშინდელ თავზე სინათლის წლით წინ იყო.</p>
                     </div>
                     <button class="whoAmIBtn">ჩატის დაწყება</button>
@@ -113,19 +110,19 @@
 
     <!-- communication -->
     <section class="communication">
-        <div class="communication_title">
-            <h2>ვსაუბრობ შენთვის მორგებულ და მარტივ ენაზე</h2>
-        </div>
-        <div class="communication_container">
-            <!-- js -->
+        <div class="communication_content">
+            <div class="communication_title">
+                <h2>ვსაუბრობ შენთვის მორგებულ და მარტივ ენაზე</h2>
+            </div>
+            <div class="communication_container">
+                <!-- js -->
+            </div>
+            <img class='figure4' src='assets/images/figure.png' alt='img'>
         </div>
     </section>
 
     <!-- creators -->
     <section class="creators"  id="creators">
-        <div class="creators-image">
-            <img src="assets/images/chatbot/chatbot4.png" alt="">
-        </div>
         <div class="creators-container">
             <div class="creators-item">
                 <div class="creators-icon">
@@ -160,6 +157,9 @@
                     </p>
                 </div>
             </div>
+        </div>
+        <div class="creators-image">
+            <img src="assets/images/chatbot/chatbot4.png" alt="">
         </div>
     </section>
 
