bugfix/responsive-tablet-header

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <li><a href="#contact">კონტაქტი</a></li>
             </ul>
         </nav>
+        <div class="openNavbar">
+            <img src="assets/images/openNavbar.svg" alt="">
+        </div>
     </header>
     
     <!-- discovery -->
