feature/responsive-mobile

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     
     <!-- discovery -->
     <section class="discovery" id="home">
+        <h1 class="mobile-title">აღმოაჩინე <span>სიახლეები</span> ჩვენთან ერთად</h1>
         <div class="discoveryContent">
             <div>
                 <div class="discoveryNews">
@@ -47,6 +48,7 @@
             </div>
             <div class="discoveryImage">
                 <img src="assets/images/chatbot/chatBot.png" alt="">
+                <button class="mobile-discoveryBtn">ჩატის დაწყება</button>
             </div>
         </div>
     </section>
@@ -137,6 +139,9 @@
                         ჩეთბოტის დაარსება იწყება 5 წლის წინ და ჩვენ ყველაფერი ვაკეთებდით მისი სრულყოფისთვის და ჩამოყალიბებისსათვის
                     </p>
                 </div>
+            </div>
+            <div class="mobile-creators-image">
+                <img src="assets/images/chatbot/mobile-chatbot4.svg" alt="">
             </div>
             <div class="creators-item">
                 <div class="creators-icon">
