--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="assets/styles/css/style.css">
     <title>Document</title>
 </head>
+
 <body>
 
     <div class="background-image"></div>
@@ -20,19 +22,19 @@
             <img class="uniLabImage" src="assets/images/iliaUni.svg" alt="">
         </div>
         <nav class="nav">
-            <ul>
-                <li><a href="#home">მთავარი</a></li>
-                <li><a href="#whoAmI">ვინ ვარ მე</a></li>
-                <li><a href="#profile">ჩემი პროფილი</a></li>
-                <li><a href="#creators">შემქმნელები</a></li>
-                <li><a href="#contact">კონტაქტი</a></li>
+            <ul class="nav_ul">
+                <li><a href="#home" class="link">მთავარი</a></li>
+                <li><a href="#whoAmI" class="link">ვინ ვარ მე</a></li>
+                <li><a href="#profile" class="link">ჩემი პროფილი</a></li>
+                <li><a href="#creators" class="link">შემქმნელები</a></li>
+                <li><a href="#contact" class="link">კონტაქტი</a></li>
             </ul>
         </nav>
-        <div class="openNavbar">
-            <img src="assets/images/openNavbar.svg" alt="">
+        <div class="navbar">
+            <img class="openNavbar" src="assets/images/openNavbar.svg" alt="">
         </div>
     </header>
-    
+
     <!-- discovery -->
     <section class="discovery" id="home">
         <h1 class="mobile-title">აღმოაჩინე <span>სიახლეები</span> ჩვენთან ერთად</h1>
@@ -41,7 +43,8 @@
                 <div class="discoveryNews">
                     <h1>აღმოაჩინე <span>სიახლეები</span> ჩვენთან ერთად</h1>
                     <div>
-                        <p>ვებგვერდი მოხმარებლებს გააცნობს ინფორმაციას პროექტის შესახებ და მისცემს მათ საშუალებას გაესაუბრონ ჩეთბოტს იქვე ჩაშენებული ჩათის გამოყენებით</p>
+                        <p>ვებგვერდი მოხმარებლებს გააცნობს ინფორმაციას პროექტის შესახებ და მისცემს მათ საშუალებას
+                            გაესაუბრონ ჩეთბოტს იქვე ჩაშენებული ჩათის გამოყენებით</p>
                     </div>
                     <button class="discoveryBtn">ჩატის დაწყება</button>
                 </div>
@@ -64,15 +67,19 @@
                 <div class="whoAmI-text">
                     <h2>ვინ ვარ მე?!</h2>
                     <div>
-                        <p>მოგესალმებით, მე ილიაუნის “ჩეტბოტი” ვარ და ვფლობ სუპერ ტექნოლოგიურ ძალებს.  დარწმუნებული ვარ, რომ ერთმანეთს გავუგებთ და ძალიან ვიმეგობრებთ. . მინდა, რომ ერთად აღმოვაჩინოთ ახალი ინტერესები და შესაძლებლობები.  
-                            მთავარი რჩევა კი ჩემგან ის არის, რომ შენ ირგვლივ სამყაროს განვითარების ტემპს ყურადღება არ მიაქციო და თავს ისე შემოუძახო, რომ ხვალ უკვე დროს გაუსწრო და შენს გუშინდელ თავზე სინათლის წლით წინ იყო.</p>
+                        <p>მოგესალმებით, მე ილიაუნის “ჩეტბოტი” ვარ და ვფლობ სუპერ ტექნოლოგიურ ძალებს. დარწმუნებული ვარ,
+                            რომ ერთმანეთს გავუგებთ და ძალიან ვიმეგობრებთ. . მინდა, რომ ერთად აღმოვაჩინოთ ახალი
+                            ინტერესები და შესაძლებლობები.
+                            მთავარი რჩევა კი ჩემგან ის არის, რომ შენ ირგვლივ სამყაროს განვითარების ტემპს ყურადღება არ
+                            მიაქციო და თავს ისე შემოუძახო, რომ ხვალ უკვე დროს გაუსწრო და შენს გუშინდელ თავზე სინათლის
+                            წლით წინ იყო.</p>
                     </div>
                     <button class="whoAmIBtn">ჩატის დაწყება</button>
                 </div>
             </div>
             <img class="figure2" src="assets/images/figure.png" alt="">
         </div>
-    </section>    
+    </section>
 
     <!-- profile -->
     <section class="profile" id="profile">
@@ -127,7 +134,7 @@
     </section>
 
     <!-- creators -->
-    <section class="creators"  id="creators">
+    <section class="creators" id="creators">
         <div class="creators-container">
             <div class="creators-item">
                 <div class="creators-icon">
@@ -136,7 +143,8 @@
                 <div>
                     <h4>ნარატივ დიზაინერი</h4>
                     <p>
-                        ჩეთბოტის დაარსება იწყება 5 წლის წინ და ჩვენ ყველაფერი ვაკეთებდით მისი სრულყოფისთვის და ჩამოყალიბებისსათვის
+                        ჩეთბოტის დაარსება იწყება 5 წლის წინ და ჩვენ ყველაფერი ვაკეთებდით მისი სრულყოფისთვის და
+                        ჩამოყალიბებისათვის
                     </p>
                 </div>
             </div>
@@ -150,7 +158,8 @@
                 <div>
                     <h4>ანიმა ჩეთბოტიქსი</h4>
                     <p>
-                        ჩეთბოტის დაარსება იწყება 5 წლის წინ და ჩვენ ყველაფერი ვაკეთებდით მისი სრულყოფისთვის და ჩამოყალიბებისსათვის
+                        ჩეთბოტის დაარსება იწყება 5 წლის წინ და ჩვენ ყველაფერი ვაკეთებდით მისი სრულყოფისთვის და
+                        ჩამოყალიბებისათვის
                     </p>
                 </div>
             </div>
@@ -161,7 +170,8 @@
                 <div>
                     <h4>უნილაბი</h4>
                     <p>
-                        ჩეთბოტის დაარსება იწყება 5 წლის წინ და ჩვენ ყველაფერი ვაკეთებდით მისი სრულყოფისთვის და ჩამოყალიბებისსათვის
+                        ჩეთბოტის დაარსება იწყება 5 წლის წინ და ჩვენ ყველაფერი ვაკეთებდით მისი სრულყოფისთვის და
+                        ჩამოყალიბებისათვის
                     </p>
                 </div>
             </div>
@@ -174,48 +184,49 @@
     <!-- footer -->
     <footer class="footer" id="contact">
         <img class="figure5" src="assets/images/figure.png" alt="">
-            <div class="chatbot">
-                <h4>ანიმა ჩეთბოტიქსი</h4>
-                <div class="contact">
-                    <div class="contact-flex">
-                        <div>
-                            <img src="assets/images/contact/contact-phone.png" alt="">
-                            <p>+995 591 69 04 06</p>
-                        </div>
-                    </div>
-                    <div class="contact-flex">
-                        <div>
-                            <img src="assets/images/contact/contact-gmail.png" alt="">
-                            <p>contact@animachatbotics.com</p>
-                        </div>
-                    </div>
-                    <div class="contact-flex">
-                        <div>
-                            <img src="assets/images/contact/contact-map.png" alt="">
-                            <p>თბილისი კოსტავას N:14</p>
-                        </div>
+        <div class="chatbot">
+            <h4>ანიმა ჩეთბოტიქსი</h4>
+            <div class="contact">
+                <div class="contact-flex">
+                    <div>
+                        <img src="assets/images/contact/contact-phone.png" alt="">
+                        <p>+995 591 69 04 06</p>
                     </div>
                 </div>
-            </div>
-            <div class="unilab">
-                <h4>უნილაბი</h4>
-                <div class="contact">
-                    <div class="contact-flex">
-                        <div>
-                            <img src="assets/images/contact/contact-gmail.png" alt="">
-                            <p>infounilab@iliauni.edu.ge</p>
-                        </div>
+                <div class="contact-flex">
+                    <div>
+                        <img src="assets/images/contact/contact-gmail.png" alt="">
+                        <p>contact@animachatbotics.com</p>
                     </div>
-                    <div class="contact-flex">
-                        <div>
-                            <img src="assets/images/contact/contact-map.png" alt="">
-                            <p>3/5 ქაქუცა ჩოლოყაშვილის ქუჩა თბილისი</p>
-                        </div>
+                </div>
+                <div class="contact-flex">
+                    <div>
+                        <img src="assets/images/contact/contact-map.png" alt="">
+                        <p>თბილისი კოსტავას N:14</p>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="unilab">
+            <h4>უნილაბი</h4>
+            <div class="contact">
+                <div class="contact-flex">
+                    <div>
+                        <img src="assets/images/contact/contact-gmail.png" alt="">
+                        <p>infounilab@iliauni.edu.ge</p>
+                    </div>
+                </div>
+                <div class="contact-flex">
+                    <div>
+                        <img src="assets/images/contact/contact-map.png" alt="">
+                        <p>3/5 ქაქუცა ჩოლოყაშვილის ქუჩა თბილისი</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
     </footer>
     <script src="assets/js/main.js"></script>
 </body>
+
 </html>
