--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="programming chatbot">
+    <meta name="author" content="unilab">
     <link rel="stylesheet" href="assets/styles/css/style.css">
-    <title>Document</title>
+    <title>programming chatbot</title>
 </head>
 
 <body>
 
     <div class="background-image"></div>
     <div class="message-square">
-        <img src="assets/images/message-square.svg" alt="">
+        <img src="assets/images/message-square.svg" alt="messageSquare">
     </div>
     <!-- header -->
     <header class="header">
         <div class="images">
-            <img class="uniLabImage" src="assets/images/uniLab.svg" alt="">
-            <img class="uniLabImage" src="assets/images/iliaUni.svg" alt="">
+            <img class="uniLabImage" src="assets/images/uniLab.svg" alt="uniLabImg">
+            <img class="iliUniImg" src="assets/images/iliaUni.svg" alt="iliaUniImg">
         </div>
         <nav class="nav">
             <ul class="nav_ul">
@@ -31,7 +33,9 @@
             </ul>
         </nav>
         <div class="navbar">
-            <img class="openNavbar" src="assets/images/openNavbar.svg" alt="">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
         </div>
     </header>
 
@@ -50,7 +54,7 @@
                 </div>
             </div>
             <div class="discoveryImage">
-                <img src="assets/images/chatbot/chatBot.png" alt="">
+                <img src="assets/images/chatbot/chatBot.png" alt="chatBot">
                 <button class="mobile-discoveryBtn">ჩატის დაწყება</button>
             </div>
         </div>
@@ -59,9 +63,9 @@
     <!-- whoAmI -->
     <section class="whoAmI" id="whoAmI">
         <div class="whoAmI-content">
-            <img class="figure1" src="assets/images/figure.png" alt="">
+            <img class="figure1" src="assets/images/figure.png" alt="img">
             <div class="whoAmI-image">
-                <img src="assets//images/chatbot/chatBot2.svg" alt="">
+                <img src="assets//images/chatbot/chatBot2.svg" alt="chatBot">
             </div>
             <div>
                 <div class="whoAmI-text">
@@ -77,7 +81,7 @@
                     <button class="whoAmIBtn">ჩატის დაწყება</button>
                 </div>
             </div>
-            <img class="figure2" src="assets/images/figure.png" alt="">
+            <img class="figure2" src="assets/images/figure.png" alt="img">
         </div>
     </section>
 
@@ -88,35 +92,35 @@
                 <h2>ჩეთბოტის პროფილი</h2>
                 <div class="profileObject">
                     <div>
-                        <img src="assets/images/diamond.png" alt="">
+                        <img src="assets/images/diamond.png" alt="diamond">
                         <p>სახელი - <span>პატრიკი</span></p>
                     </div>
                     <div>
-                        <img src="assets/images/diamond.png" alt="">
+                        <img src="assets/images/diamond.png" alt="diamond">
                         <p>ასაკი - <span>7 წლის</span></p>
                     </div>
                     <div>
-                        <img src="assets/images/diamond.png" alt="">
+                        <img src="assets/images/diamond.png" alt="diamond">
                         <p>წარმოშობა - <span>უნილაბი</span></p>
                     </div>
                     <div>
-                        <img src="assets/images/diamond.png" alt="">
+                        <img src="assets/images/diamond.png" alt="diamond">
                         <p>დანიშნულება - <span>უკეთესი მომავალი</span></p>
                     </div>
                     <div>
-                        <img src="assets/images/diamond.png" alt="">
+                        <img src="assets/images/diamond.png" alt="diamond">
                         <p>ჰობი - <span>სიახლეების აღმოჩენა</span></p>
                     </div>
                     <div>
-                        <img src="assets/images/diamond.png" alt="">
+                        <img src="assets/images/diamond.png" alt="diamond">
                         <p>სისუსტე - <span>არათავდაჯერებული</span></p>
                     </div>
                 </div>
             </div>
             <div class="profileImage">
-                <img src="assets/images/chatbot/chatBot3.png" alt="">
+                <img src="assets/images/chatbot/chatBot3.png" alt="chatBot">
             </div>
-            <img class="figure3" src="assets/images/figure.png" alt="">
+            <img class="figure3" src="assets/images/figure.png" alt="img">
         </div>
     </section>
 
@@ -138,7 +142,7 @@
         <div class="creators-container">
             <div class="creators-item">
                 <div class="creators-icon">
-                    <img src="assets/images/creators/creators1.png" alt="">
+                    <img src="assets/images/creators/creators1.png" alt="creatorsImg">
                 </div>
                 <div>
                     <h4>ნარატივ დიზაინერი</h4>
@@ -149,11 +153,11 @@
                 </div>
             </div>
             <div class="mobile-creators-image">
-                <img src="assets/images/chatbot/mobile-chatbot4.svg" alt="">
+                <img src="assets/images/chatbot/mobile-chatbot4.svg" alt="chatBot">
             </div>
             <div class="creators-item">
                 <div class="creators-icon">
-                    <img src="assets/images/creators/creators2.png" alt="">
+                    <img src="assets/images/creators/creators2.png" alt="creatorsImg">
                 </div>
                 <div>
                     <h4>ანიმა ჩეთბოტიქსი</h4>
@@ -165,7 +169,7 @@
             </div>
             <div class="creators-item">
                 <div class="creators-icon">
-                    <img src="assets/images/creators/creators3.png" alt="">
+                    <img src="assets/images/creators/creators3.png" alt="creatorsImg">
                 </div>
                 <div>
                     <h4>უნილაბი</h4>
@@ -177,31 +181,25 @@
             </div>
         </div>
         <div class="creators-image">
-            <img src="assets/images/chatbot/chatbot4.png" alt="">
+            <img src="assets/images/chatbot/chatbot4.png" alt="chatBot4">
         </div>
     </section>
 
     <!-- footer -->
     <footer class="footer" id="contact">
-        <img class="figure5" src="assets/images/figure.png" alt="">
+        <img class="figure5" src="assets/images/figure.png" alt="img">
         <div class="chatbot">
             <h4>ანიმა ჩეთბოტიქსი</h4>
             <div class="contact">
                 <div class="contact-flex">
                     <div>
-                        <img src="assets/images/contact/contact-phone.png" alt="">
-                        <p>+995 591 69 04 06</p>
-                    </div>
-                </div>
-                <div class="contact-flex">
-                    <div>
-                        <img src="assets/images/contact/contact-gmail.png" alt="">
+                        <img src="assets/images/contact/contact-gmail.png" alt="gmailImg">
                         <p>contact@animachatbotics.com</p>
                     </div>
                 </div>
                 <div class="contact-flex">
                     <div>
-                        <img src="assets/images/contact/contact-map.png" alt="">
+                        <img src="assets/images/contact/contact-map.png" alt="mapImg">
                         <p>თბილისი კოსტავას N:14</p>
                     </div>
                 </div>
@@ -212,13 +210,13 @@
             <div class="contact">
                 <div class="contact-flex">
                     <div>
-                        <img src="assets/images/contact/contact-gmail.png" alt="">
+                        <img src="assets/images/contact/contact-gmail.png" alt="gmailImg">
                         <p>infounilab@iliauni.edu.ge</p>
                     </div>
                 </div>
                 <div class="contact-flex">
                     <div>
-                        <img src="assets/images/contact/contact-map.png" alt="">
+                        <img src="assets/images/contact/contact-map.png" alt="mapImg">
                         <p>3/5 ქაქუცა ჩოლოყაშვილის ქუჩა თბილისი</p>
                     </div>
                 </div>
