--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="programming chatbot">
     <meta name="author" content="unilab">
     <link rel="stylesheet" href="assets/styles/css/style.css">
+    <!-- favIcon -->
+    <link rel="icon" href="assets/images/chatbot/chatBot.ico">
+    <link rel="icon" type="image/png" href="assets/images/chatbot/chatBot.png">
     <title>programming chatbot</title>
 </head>
 
@@ -16,8 +19,6 @@
     <div class="background-image"></div>
 
 
-    
-    
     <div class="chatbot__container">
             <iframe id="chatbotIframe" src="https://animachatbotics.com/Scripts/bot-MBD/bot/index3.html?botId=4028&tone=0" frameborder="0"></iframe>
 	</div>
